// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CHeaderDivider customize 1`] = `
<div>
  <div
    class="header-divider bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CHeaderDivider component 1`] = `
<div>
  <div
    class="header-divider"
  >
    Test
  </div>
</div>
`;
